```mermaid
---
title: gtopt Planning Data Model
---
classDiagram
    direction TB

    class Planning {
        +string name
        +Options options
    }
    class Simulation {
        +Scenario[] scenario_array
        +Stage[]    stage_array
        +Phase[]    phase_array
        +Block[]    block_array
        +Scene[]    scene_array
    }
    class Scenario {
        +Uid  uid
        +Name name
        +Real probability_factor [p.u.]
        +Bool active
    }
    class Phase {
        +Uid  uid
        +Name name
        +Size first_stage
        +Size count_stage
        +Bool active
    }
    class Stage {
        +Uid  uid
        +Name name
        +Size first_block
        +Size count_block
        +Real discount_factor [p.u.]
        +Bool active
    }
    class Block {
        +Uid  uid
        +Name name
        +Real duration [h]
    }
    class Scene {
        +Uid  uid
        +Name name
        +Size first_scenario
        +Size count_scenario
        +Bool active
    }
    class System {
        +Bus[]              bus_array
        +Generator[]        generator_array
        +Demand[]           demand_array
        +Line[]             line_array
        +Battery[]          battery_array
        +Converter[]        converter_array
        +GeneratorProfile[] generator_profile_array
        +DemandProfile[]    demand_profile_array
        +ReserveZone[]      reserve_zone_array
        +ReserveProvision[] reserve_provision_array
        +Junction[]         junction_array
        +Waterway[]         waterway_array
        +Flow[]             flow_array
        +Reservoir[]        reservoir_array
        +ReservoirSeepage[]  reservoir_seepage_array
        +Turbine[]          turbine_array
    }

    Planning  *--  Simulation : contains
    Planning  *--  System     : contains
    Simulation *-- Scenario   : has many (probability-weighted in objective)
    Simulation *-- Stage      : has many
    Simulation *-- Phase      : has many (default: 1, Benders decomposition level)
    Simulation *-- Block      : has many
    Simulation *-- Scene      : has many (default: 1, independent LP trajectory)
    Phase      o-- Stage      : groups (first_stage + count_stage)
    Stage      o-- Block      : references (first_block + count_block)
    Scene      --> Scenario   : indexes (first_scenario + count_scenario)
    Scene      ..> Phase      : each (scene,phase) = one LP subproblem
```